--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -18,7 +18,7 @@ DEP_DIR		=		$(addprefix $(BUILD_DIR), dep/)
 
 #		SRC
 
-BASENAME	=		main Animal Dog Cat Brain
+BASENAME	=		main Animal Dog Cat Brain WrongAnimal WrongCat
 
 SRC			=		$(addprefix $(SRC_DIR), $(addsuffix .cpp, $(BASENAME)))
 OBJ			=		$(addprefix $(OBJ_DIR), $(addsuffix .o, $(BASENAME)))
